# Agentic-AI-Projects

./: LICENSE  README.md
Project_Vibe_Coding/: Financial Portfolio Intelligence Dashboard.html  Financial Portfolio Intelligence System Dashboard.html  Financial Portfolio Intelligence System_Presentation.pptx  README.md  WorkFlow and Architecture Diagram.html  sim_data.json  simulate.py
Week2_Project/RAG_Financial_Valuation/: RAG Financial Intelligence — Week 2 Project.json  RAG_Financial_Intelligence_workflow.js  RAG_Project_README.md  Valuation_WACC.json  app.py  requirements.txt
Week3_Project_Multi_Agents/: ReadME.md
Week3_Project_Multi_Agents/Trade Deep Agent/: Trade_Deep_Agent_Presentation.pptx  Trade_Deep_Agent_Project_Details.docx  add_market_scan.py  fix_critic_date_check.py  fix_hitl_cell.py  fix_hitl_echo.py  fix_stale_date.py  fix_trade_idea_input.py  gen_diagrams.py  gen_project_diagrams.py  pyproject.toml  surface_critic_verdict.py  trade_deep_agent.ipynb  wire_strategy_validation.py
Week3_Project_Multi_Agents/Trade Deep Agent/drafts/: trade_ticket.md
Week3_Project_Multi_Agents/Trade Deep Agent/grounding/: gen_academy.md  trading_playbook.md  trading_strategy_dashboard.md
Week3_Project_Multi_Agents/Trade Deep Agent/memories/: risk_profile.md
Week3_Project_Multi_Agents/Trade Deep Agent/review/: critic_verdict.md
Week3_Project_Multi_Agents/Trade Deep Agent/skills/compliance-review-style/: SKILL.md
Week3_Project_Multi_Agents/Trade Deep Agent/skills/trade-ticket-style/: SKILL.md
