[project]
name = "trade-deep-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.10",
    "ipykernel>=7.3.0",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-openai>=1.3.2",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
]
